Dark mode fix

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -110,16 +110,28 @@ h1 {
 
 /* Hover state for non-active tab */
 .selection-btn:hover:not(.active) {
-    border-bottom-color: rgba(0, 0, 0, 0.04);
+    border-top-color: rgba(0, 0, 0, 0.04);
 }
 
 /* Slightly different hover in dark mode */
 .dark-mode .selection-btn:hover:not(.active) {
-    border-bottom-color: rgba(255, 255, 255, 0.07);
+    border-top-color: rgba(255, 255, 255, 0.07);
 }
 
 /* Active tab: underlined and a bit bolder */
 .selection-btn.active {
+    background-color: var(--app-background);
+    font-weight: 700;
+}
+
+/* Have to invert this for dark mode :D */
+.dark-mode .selection-btn.active {
+    background-color: var(--app-border);
+    font-weight: 700;
+}
+
+/* Active tab: underlined and a bit bolder */
+.dark-mode .selection-btn:not(.active) {
     background-color: var(--app-background);
     font-weight: 700;
 }
